fix overflow issue

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1{
     text-align: end;
     font-size: 30px; 
     width: 461px;
+    min-height: 81px;
     overflow: auto;
 }
 #display{
@@ -41,8 +42,7 @@ h1{
     font-size: 60px;
     width: 461px;
     min-height: 69px;
-    white-space: nowrap; 
-    overflow: hidden;
+    overflow: auto;
 }
 #container1{
     display: flex;
